--- a/Projeto01(formulario)/index.html
+++ b/Projeto01(formulario)/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./Contatos.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
     </section>
     <nav>
         <ul>
-            <form  method="post" action="./Cliente.php"id="Formulario">
+            <form  method="post" action="Cliente.php"id="Formulario">
                 <label for="Nome">Nome</label><input type="text" id="Nome" name="nome" title="nome" placeholder="Digite seu nome" required><br>
                 <label for="Email">Email</label><input type="email" name="email" id="Email" placeholder="Digite seu Email" required><br>
                 <input type="file" name="file" id="file"><br>
