--- a/Projeto01(formulario)/index.html
+++ b/Projeto01(formulario)/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="Contatos.html">Contato</a></li>
+                <li><a href="./Contatos.html">Contato</a></li>
             </ul>
         </nav>
     </header>
